--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "npm install && node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
